[tool.poetry]
name = "learn-reactive-by-testing"
version = "0.1.0"
description = ""
authors = ["Mat <mathieu@redapesolutions.com>"]
readme = "README.md"
packages = [{include = "learn_reactive_by_testing"}]

[tool.poetry.dependencies]
python = "^3.10"
reactivex = "^4.0.4"
pytest = "^7.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
