[tool.poetry]
name = "learn-reactive-by-testing"
version = "0.1.0"
description = ""
authors = ["Mat <mathieu@redapesolutions.com>"]
readme = "README.md"
packages = [{ include = "learn_reactive_by_testing" }]

[tool.poetry.dependencies]
python = "^3.11"
reactivex = "^4.0.4"
pytest = "^7.2.0"
websockets = "^10.4"
returns = "^0.19.0"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra"
testpaths = ["learn_reactive_by_testing"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
